# build123d

./: .readthedocs.yaml  CITATION.cff  Citation.md  README.md  mypy.ini  novtk.sh  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: mypy.yml  test.yml
docs/: OpenSCAD.rst  algebra_definition.rst  index.rst  joints.rst  key_concepts_algebra.rst  key_concepts_builder.rst  moving_objects.rst  requirements.txt  tips.rst  tutorial_design.rst
src/build123d/: __init__.py  build_common.py  build_enums.py  build_line.py  build_part.py  build_sketch.py  drafting.py  exporters.py  exporters3d.py  geometry.py  importers.py  joints.py  jupyter_tools.py  mesher.py  objects_curve.py  objects_part.py  objects_sketch.py  operations_generic.py  operations_part.py  operations_sketch.py  persistence.py  template_render.js  vtk_tools.py
src/build123d/topology/: __init__.py  composite.py  one_d.py  shape_core.py  three_d.py  two_d.py  utils.py
tests/: test_benchmarks.py  test_build_common.py  test_direct_api.py  test_exporters.py  test_importers.py  test_mesher.py  test_pack.py  test_topo_explore.py
tests/test_direct_api/: test_always_equal.py  test_assembly.py  test_axis.py  test_bound_box.py  test_cad_objects.py  test_clean_method.py  test_color.py  test_compound.py  test_direct_api_test_case.py  test_edge.py  test_face.py  test_functions.py  test_group_by.py  test_import_export.py  test_jupyter.py  test_location.py  test_mass_properties.py  test_matrix.py  test_mixin1_d.py  test_mixin3_d.py  test_oriented_bound_box.py  test_plane.py  test_projection.py  test_rotation.py  test_shape.py  test_shape_list.py  test_shells.py  test_skip_clean.py  test_solid.py  test_v_t_k_poly_data.py  test_vector.py  test_vector_like.py  test_vertex.py  test_vtk_poly_data.py  test_wire.py
tools/: refactor_test_direct_api.py  refactor_topo.py
